# tribo_analyzer

./: pyproject.toml
src/tribo_analyzer/: __init__.py  config.py  phosphate.py  plot.py  plot_config.py  structure_analysis.py  utils.py
src/tribo_analyzer/io/: __init__.py
