[project]
name = "tribo-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.24.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy<2.3",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
